...
                    text: $vm.name,
                    error: vm.fieldErrors.name,
                    keyboardType: .default,
                    textContentType: nil,
                    submitLabel: .done,
                    autocapitalization: .sentences,
                    accessibilityId: "ActivityEditorNameField"
                ) {
                    isNameFocused = false
                }
                .focused($isNameFocused)
                .onChange(of: vm.name) { _ in
                    vm.nameDidChange()
...
            bottomBar: {
                PrimaryButton(
                    title: L10n.activityEditorSave.text,
                    icon: nil,
                    isLoading: vm.isLoading,
                    isDisabled: !vm.canSave,
                    accessibilityId: "ActivityEditorSaveButton"
                ) {
                    vm.save()
                }
                .padding(.horizontal, Theme.screenHorizontalPadding)
                .padding(.vertical, Theme.spacingSmall)
                .background(Theme.backgroundPrimary)
...
